tests/parser/should_pass/module_instances.csp
module M(X)
    x = x
exports
    Y = X
endmodule

instance M1 = M({})
