tests/parser/should_fail/let_timed_datatype.csp
P =
    let
        Timed (\ _ @ 1) {
            datatype X = Y
        }
    within P
